--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
     </properties>
 
     <dependencies>
+        <!-- Jakarta EE and MicroProfile APIs -->
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>10.0.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.eclipse.microprofile</groupId>
             <artifactId>microprofile</artifactId>
@@ -23,6 +30,33 @@
             <type>pom</type>
             <scope>provided</scope>
         </dependency>
+        <!-- Lombok dependency -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- MySQL -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.3.0</version>
+        </dependency>
+        <!-- Hibernate Core (JPA Implementation) -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.2.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.6.15.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -41,6 +75,18 @@
                     <groupId>io.openliberty.tools</groupId>
                     <artifactId>liberty-maven-plugin</artifactId>
                     <version>3.11.2</version>
+                    <configuration>
+                        <copyDependencies>
+                            <dependencyGroup>
+                                <location>jdbc</location>  <!-- JDBC driver will be placed in Open Liberty's target/liberty/wlp/usr/servers/defaultServer/jdbc/ directory -->
+                                <dependency>
+                                    <groupId>com.mysql</groupId>
+                                    <artifactId>mysql-connector-j</artifactId>
+                                    <version>8.3.0</version>
+                                </dependency>
+                            </dependencyGroup>
+                        </copyDependencies>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
