--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>5.6.15.Final</version>
         </dependency>
 
+        <!-- Encryption -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
